<resources>
    <string name="app_name">ChessPad</string>
    <string name="err_empty_new_tag_name">Missing tag name</string>
    <string name="err_tag_name_exists">Tag already exists</string>
    <string name="err_moves_ignored">moves can be invalid</string>
    <string name="err_not_solution">This is not a solution</string>
    <string name="err_network">Connection error, check your phone network connection.</string>
    <string name="err_login">Login error, check user name and password.</string>
    <string name="err_puzzle">Puzzle download error.</string>
    <string name="err_record_puzzle">Cannot record puzzle result, try again.</string>
    <string name="alert_pgn_path_label">Full Path to Pgn File:</string>
    <string name="alert_merge_start_label">Start:</string>
    <string name="alert_merge_end_label">End:</string>
    <string name="alert_annotate_label">Annotate</string>
    <string name="alert_merge_max_plys_label">Max plys:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_login_ok">Login successful.</string>
    <string name="msg_save">Do you want to save your changes to the opened game?</string>
    <string name="msg_del_move">Do you want to delete this and the following moves?</string>
    <string name="msg_del_game">Do you want to remove irreversibly the whole game from pgn file?</string>
    <string name="msg_3_fold_repetition">Three-fold repetition</string>
    <string name="msg_50_reversible_moves">50 consecutive reversible moves</string>
    <string name="msg_stalemate">stalemate</string>
    <string name="msg_merge_count">Merged %d game(s)</string>
    <string name="msg_puzzle_keep_solving">Great! Keep good job.</string>
    <string name="msg_puzzle_success">Success!</string>
    <string name="msg_puzzle_success_with_statistics">Success!\nopened %s\nsolved %s, %.2f%%</string>
    <string name="msg_puzzle_failure">Failure.</string>
    <string name="msg_puzzle_failure_with_statistics">Failure.\nopened %s\nsolved %s, %.2f%%</string>
    <string name="menu_load">Load</string>
    <string name="menu_puzzle">Open Puzzles</string>
    <string name="menu_merge">Merge</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_save">Save</string>
    <string name="menu_append">Append</string>
    <string name="menu_any_move">Any move</string>
    <string name="menu_cancel_setup">Cancel Setup</string>
    <string name="menu_start_dgt_game">Start Dgt Board Mode</string>
    <string name="menu_stop_dgt_game">Stop Dgt Board Mode</string>
    <string name="menu_about">About</string>
    <string name="menu_lichess_puzzle">Lichess Puzzles</string>
    <string name="menu_lichess_login">Lichess Login</string>
    <string name="menu_lichess_logout">Lichess Logout</string>
    <string name="menu_connect_to_fics">Connect to FICS</string>
    <string name="menu_close_fics_connection">Close FICS connection</string>
    <string name="menu_fics_mate">Mate Puzzle</string>
    <string name="menu_tactics">Tactics</string>
    <string name="menu_study">Study</string>
    <string name="menu_endgame">Endgame</string>
    <string name="label_en_pass">En passant: </string>
    <string name="label_halfmove_clock">Halfmove clock: </string>
    <string name="label_move_num">Move number: </string>
    <string name="crash_cannot_save">Cannot write file. \nTry to select different directory.</string>
    <string name="crash_cannot_load">Cannot load pgn</string>
    <string name="crash_cannot_list">Cannot list items</string>
    <string name="hint_file_name">File Name</string>
    <string name="hint_tag_label">New Tag</string>
    <string name="hint_tag_value">New Value</string>
    <string name="hint_merge_start"> </string>
    <string name="hint_merge_end"> </string>
    <string name="hint_max_plys"> </string>
    <string name="lookup_button_description">Lookup for folder/file</string>
    <string name="dgt_status_game">Recording...</string>
    <string name="msg_connection_lost">Connection lost, try to reconnect</string>
    <string name="msg_connecting">Connecting, please wait...</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="login">Login</string>
    <string name="hint_from_server">Messages from FICS</string>
    <string name="hint_send_to_fics">Send to FICS</string>
    <string-array name="puzzlebot_options">
        <item>Any</item>
        <item>In 1 Move</item>
        <item>In 2 Moves</item>
        <item>In 3 Moves</item>
        <item>In 4 and More Moves</item>
    </string-array>
    <string-array name="endgamebot_options">
        <item>kpk - K, P vs. K</item>
        <item>kbnk - K, B, N vs. K</item>
        <item>kbbk - K, B, B vs. K</item>
        <item>kqk - K, Q vs. K</item>
        <item>krpkr - K, R, P vs. K, R</item>
        <item>krk - K, R vs. K</item>
        <item>kqkr - K, Q vs. K, R</item>
        <item>kppkp - K, P, P vs. K, P</item>
        <item>kpkp - K, P vs. K, P</item>
        <item>kqpkq - K, Q, P vs. K, Q</item>
        <item>knnkp - K, N, N vs. K, P</item>
        <item>kppkpp - K, P, P vs. K, P, P</item>
        <item>kqqkqr - K, Q, Q vs. K, Q, R</item>
    </string-array>
    <string-array name="setup_errs">
        <item>0 Setup OK</item>
        <item>1 Invalid en passant format</item>
        <item>2 dummy</item>
        <item>3 Invalid square for white en passant</item>
        <item>4 Invalid square for black en passant</item>
        <item>5 dummy</item>
        <item>6 dummy</item>
        <item>7 No white king</item>
        <item>8 No black king</item>
        <item>9 Row for white pawn!</item>
        <item>10 Row for black pawn!</item>
        <item>11 En passant when half-move clock >0!</item>
        <item>12 Other king checked</item>
        <item>13 Invalid castling options</item>
        <item>14 Invalid en passant</item>
        <item>15 Too many white pieces</item>
        <item>16 Too many black pieces</item>
        <item>17 Impossible white pieces</item>
        <item>18 Impossible black pieces</item>
    </string-array>
</resources>