<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:orientation="vertical"
    >

    <TextView android:id="@+id/append_path_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alert_pgn_path_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        />

    <LinearLayout android:id="@+id/append_controls_pane"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="-5dp"
            android:gravity="center"
            android:inputType="textNoSuggestions|textMultiLine"
            android:importantForAutofill="no"
            android:hint="@string/hint_file_name"
            />

        <ImageButton android:id="@+id/lookup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/lookup"
            android:contentDescription="@string/lookup_button_description"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/merge_controls_pane"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <LinearLayout android:id="@+id/append_pane_merge_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/alert_merge_start_label"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />

            <EditText
                android:id="@+id/merge_start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="-5dp"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:hint="@string/hint_merge_start"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:text="@string/alert_merge_end_label"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />

            <EditText android:id="@+id/merge_end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="-5dp"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:hint="@string/hint_merge_end"
                />
        </LinearLayout>

        <LinearLayout android:id="@+id/append_pane_merge_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginTop="-3dp"
                android:text="@string/alert_merge_max_plys_label"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                />

            <EditText
                android:id="@+id/merge_max_plys"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="-5dp"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:hint="@string/hint_max_plys"
                />

            <TextView
                android:id="@+id/annotate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:text="@string/alert_annotate_label"
                android:textColor="@android:color/black"
                android:background="#00ff00"
                />

        </LinearLayout>

    </LinearLayout>

    <ListView android:id="@+id/file_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        />

    <LinearLayout android:id="@+id/end_dialog_buttons_pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />

    </LinearLayout>

</LinearLayout>